[project]
name = "maskit"
version = "0.1.0"
description = "A tool to redact personally identifiable information (PII) from PDF documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.27.1",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
